force-app/main/default/objects/Unbounce_Integration_Config__c/Unbounce_Integration_Config__c.object-meta.xml
<CustomObject>
    <description>Config for Unbounce webhook (API key, webhook secret, default firm/case type). Use one active record per org or per site.</description>
    <label>Unbounce Integration Config</label>
    <nameField>
        <displayFormat>UIC-{0000000}</displayFormat>
        <label>Unbounce Integration Config Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Unbounce Integration Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>