force-app/main/default/objects/Unbounce_Integration_Config__c/fields/Default_Firm_Id__c.field-meta.xml
<CustomField>
    <fullName>Default_Firm_Id__c</fullName>
    <description>Optional. Firm ID for Unbounce intakes; not used for Referred_By (these are web-form leads, not referrals from other firms).</description>
    <label>Default Firm Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>