force-app/main/default/objects/Unbounce_Integration_Config__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When true, this config is used by getConfig(). Use one active record per org (or per site) for the Unbounce Intake API.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>