force-app/main/default/objects/Unbounce_Integration_Config__c/fields/Last_Webhook_Delivery_Status__c.field-meta.xml
<CustomField>
    <fullName>Last_Webhook_Delivery_Status__c</fullName>
    <label>Last Webhook Delivery Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>