force-app/main/default/objects/Unbounce_Integration_Config__c/fields/Last_Webhook_Request_JSON__c.field-meta.xml
<CustomField>
    <fullName>Last_Webhook_Request_JSON__c</fullName>
    <label>Last Webhook Request JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>