force-app/main/default/objects/Unbounce_Integration_Config__c/fields/Outbound_Auth_Mode__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Auth_Mode__c</fullName>
    <description>Optional authentication mode for outbound status update webhook requests.</description>
    <label>Outbound Auth Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>ApiKeyHeader</fullName>
                <label>API Key Header</label>
            </value>
            <value>
                <fullName>BearerToken</fullName>
                <label>Bearer Token</label>
            </value>
            <value>
                <fullName>BasicAuth</fullName>
                <label>Basic Auth</label>
            </value>
            <value>
                <fullName>HmacSignature</fullName>
                <label>HMAC Signature</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>