force-app/main/default/objects/Unbounce_Integration_Config__c/fields/Outbound_Content_Type__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Content_Type__c</fullName>
    <description>Optional Content-Type header value for outbound status update webhook requests.</description>
    <label>Outbound Content Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>