force-app/main/default/objects/Unbounce_Integration_Config__c/fields/Outbound_Header_Name__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Header_Name__c</fullName>
    <description>Optional header name used by the selected outbound auth mode.</description>
    <label>Outbound Header Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>