force-app/main/default/objects/Unbounce_Integration_Config__c/fields/Outbound_Webhook_Secret__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Webhook_Secret__c</fullName>
    <description>Optional shared secret used to sign outbound Unbounce webhook notifications.</description>
    <label>Outbound Webhook Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>