force-app/main/default/objects/Unbounce_Integration_Config__c/fields/Outbound_Webhook_URL__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Webhook_URL__c</fullName>
    <description>Optional HTTPS endpoint that receives outbound Unbounce webhook notifications.</description>
    <label>Outbound Webhook URL</label>
    <type>Url</type>
</CustomField>