force-app/main/default/objects/Unbounce_Integration_Config__c/fields/Request_Field_Mappings__c.field-meta.xml
<CustomField>
    <fullName>Request_Field_Mappings__c</fullName>
    <description>JSON array of builder-managed field mappings for the Unbounce API. Each row defines an external key and an Intake field reference, such as $intake.litify_pm__Email__c. Direction is controlled separately by Request Direction.</description>
    <label>Request Field Mappings</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>