force-app/main/default/objects/Unbounce_Integration_Config__c/fields/Status_Update_Webhook_Secret__c.field-meta.xml
<CustomField>
    <fullName>Status_Update_Webhook_Secret__c</fullName>
    <description>Optional shared secret used to sign outbound intake status change notifications.</description>
    <label>Status Update Webhook Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>