force-app/main/default/objects/Unbounce_Integration_Config__c/fields/Status_Update_Webhook_URL__c.field-meta.xml
<CustomField>
    <fullName>Status_Update_Webhook_URL__c</fullName>
    <description>Optional HTTPS endpoint that receives outbound Unbounce intake status change notifications.</description>
    <label>Status Update Webhook URL</label>
    <type>Url</type>
</CustomField>